--- a/todo.txt
+++ b/todo.txt
@@ -7,4 +7,4 @@
 [ ] Backend
   [x] Generate simple x86-64 assembly for return statements and compile sample program
 [ ] Documentation
-  [ ] Document compiler pipeline in docs/architecture.md and share open questions
+  [x] Document compiler pipeline in docs/architecture.md and share open questions
